/* cheat way to get things to align better on laptop */  added to app.js to some level of temp fix

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,16 @@
   color: white;
   padding: 40px;
   padding-bottom:6px;
+  /* cheat way to get things to align better on laptop */
+  padding-left: 20%;
+
 
 }
 
 .AppBody{
   background-color: black;
+  /* cheat way to get things to align better on laptop */
+  padding-left: 20%;
   /* overflow: hidden; */
   
 }
@@ -27,3 +32,10 @@
   color: #61dafb;
 }
 
+.AppFooter{
+  /* cheat way to get things to align better on laptop */
+  padding-left: 17%;
+
+  width: 100%;
+
+}
